2008-03-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5780697> Copying content with CSS property values that are percentages can cause fidelity issues

        * editing/pasteboard/5780697-1-expected.txt: Added.
        * editing/pasteboard/5780697-1.html: Added.

2008-03-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Alexey + Mark Rowe

        Fix for <rdar://problem/5778247> - Reproducible crash on storage/execute-sql-args.html

        This test takes its best shot at handling two databases on a single database thread at once,
        then having one of those databases go away completely (garbage collection and everything)

        * storage/multiple-databases-garbage-collection-expected.txt: Added.
        * storage/multiple-databases-garbage-collection.html: Added.

2008-03-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Sam and Oliver.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16289
        - test for Acid3 tests 26 and 27 (not exactly the same issue but related)

        * fast/dom/gc-11-expected.txt: Added. Test case from bug 16289.
        * fast/dom/gc-11.html: Added.
        * fast/dom/gc-acid3.html: Added. DOM garbage collection part of Acid3.
        * fast/dom/gc-acid3-expected.txt: Added.
        * fast/dom/gc-6-expected.txt: Updated results. The old assumptions of this test
        were in conflict with the requirements of Acid3.

2008-03-04  Dan Bernstein  <mitz@apple.com>

        - test for http://bugs.webkit.org/show_bug.cgi?id=17676
          <rdar://problem/5781091> REGRESSION (r30240-r30267): href attribute values with non-ASCII characters in the host part do not work

        * fast/encoding/url-host-name-non-ascii-expected.txt: Added.
        * fast/encoding/url-host-name-non-ascii.html: Added.

2008-03-04  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Eric.
