@@ -1,0 +1,3 @@
+This tests that background-position: inherit is applied correctly.
+
+PASS
